ucdialplans/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucdialplans
  namespace: ucdialplans
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ucdialplans
  template:
    metadata:
      labels:
        app: ucdialplans
        name: ucdialplans
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: dockerhub-kenlasko-creds
      containers:
      - name: ucdialplans
        image: docker.io/kenlasko/ucdialplans:14.5.6
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
            - all
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 1000m
            memory: 500Mi
        volumeMounts:
        - name: ucdialplans-webconfig
          mountPath: /var/www/web.config
          subPath: web.config
        - name: codesign-cert
          mountPath: /app/codesign
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
      - name: dockerhub-creds
      automountServiceAccountToken: false
      volumes:
      - configMap:
          items:
          - key: web.config
            path: web.config
          name: ucdialplans-webconfig
        name: ucdialplans-webconfig
      - name: codesign-cert
        secret:
          secretName: codesign-cert
